// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of a token cell 1`] = `
<span
  className="table-token"
/>
`;

exports[`Token cell render with a token object 1`] = `
<span
  className="table-token"
  title="foo"
>
  foo
</span>
`;

exports[`Token cell render with a token string 1`] = `
<span
  className="table-token"
  title="foo"
>
  foo
</span>
`;

exports[`Token cell render with editMode and rowSelected 1`] = `
<span
  className="table-token"
>
  <i
    className="fa fa-times token-delete"
    data-testid="token-delete"
    onClick={[Function]}
  />
</span>
`;
